--- a/web/css/style.css
+++ b/web/css/style.css
@@ -76,3 +76,7 @@ footer {
 
 body {background-image: url('https://img.redbull.com/images/c_crop,w_1456,h_728,x_0,y_0,f_auto,q_auto/c_scale,w_1200/redbullcom/2021/3/8/bg68228uozazyqvdihbh/voetbal-speler-');
      }
+
+.container {
+color: blue;
+}
